--- a/pyproject.toml
+++ b/pyproject.toml
@@ -176,7 +176,7 @@ src = "boardfarm3/__init__.py"
 src = "pyproject.toml"
 
 [tool.ruff]
-ignore = [
+lint.ignore = [
     "ANN101", # annotation of self object
     "ANN204", # annotation of __init__()
     "D203",
@@ -189,10 +189,10 @@ ignore = [
     "FIX002", # we need to keep TODOs in the code
     "E501",   # line too long ignoring
 ]
-select = ["ALL"]
+lint.select = ["ALL"]
 
 # Allow autofix for all enabled rules (when `--fix`) is provided.
-fixable = ["C4", "COM", "PIE", "PT", "RUF", "SIM", "UP"]
+lint.fixable = ["C4", "COM", "PIE", "PT", "RUF", "SIM", "UP"]
 
 # Exclude a variety of commonly ignored directories.
 exclude = [
@@ -223,14 +223,14 @@ exclude = [
 line-length = 88
 
 # Allow unused variables when underscore-prefixed.
-dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 target-version = "py39"
 
-unfixable = [
+lint.unfixable = [
     "F401", # unused imports - we must know if we forgot something...
 ]
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "boardfarm3/lib/parsers/*" = [
     "ALL", # parsers are to be rewritten with JC
 ]
@@ -247,7 +247,7 @@ unfixable = [
     "PLR2004", # Magic value used in comparison
 ]
 
-[tool.ruff.mccabe]
+[tool.ruff.lint.mccabe]
 # Unlike Flake8, default to a complexity level of 10.
 max-complexity = 10
 
