build: update vs code settings to use ruff formatter
BOARDFARM-4511

Change-Id: I4bdd4655fc3359b3647a917b9bf8b39d98f22305
Signed-off-by: Andrii Gavrysh <agavrysh@libertyglobal.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/5408
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Filippo Carra <filippo.carra@infosys.com>

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,19 +1,22 @@
 {
     "recommendations": [
         "ms-python.python",
-        "ms-python.black-formatter",
-        "ms-python.isort",
         "ms-python.mypy-type-checker",
+        "ms-python.vscode-pylance",
         "ms-python.pylint",
-        "VisualStudioExptTeam.vscodeintellicode",
-        "VisualStudioExptTeam.intellicode-api-usage-examples",
+        "ms-python.flake8",
         "charliermarsh.ruff",
         "njpwerner.autodocstring",
-        "tamasfe.even-better-toml",
+        "VisualStudioExptTeam.vscodeintellicode",
+        "VisualStudioExptTeam.intellicode-api-usage-examples",
+        "tamasfe.evenBetterToml",
         "DavidAnson.vscode-markdownlint",
         "trond-snekvik.simple-rst",
         "wayou.vscode-todo-highlight",
         "vscode-icons-team.vscode-icons"
     ],
-    "unwantedRecommendations": []
+    "unwantedRecommendations": [
+        "ms-python.black-formatter",
+        "ms-python.isort"
+    ]
 }
