--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -80,6 +80,7 @@ repos:
       # Ruff version.
       rev: v0.2.2
       hooks:
+          - id: ruff-format
           - id: ruff
     - repo: https://github.com/asottile/pyupgrade
       rev: v3.15.1
