--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,7 @@ dev = [
     "pre-commit",
     "pylint",
     "pylint-per-file-ignores",
-    "ruff",
+    "ruff==v0.2.2",
     "types-ipaddress",
     "types-PyYAML",
     "types-requests",
