ci: add isort args in pre-commit yaml
Use Vertical Hanging Indent
Includes a trailing comma on multi line imports that include parentheses
See:
https://pycqa.github.io/isort/docs/configuration/multi_line_output_modes.html

Change-Id: I0b80513675fa77108c1cc45606798aa653095e9c
Signed-off-by: Michele Gualco <msalvatoregualco@libertyglobal.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/5614
Reviewed-by: Filippo Carra <filippo.carra@infosys.com>
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -76,6 +76,7 @@ repos:
             language: python
             types: [python]
             stages: [commit]
+            args: [-m=3, --tc]
     - repo: https://github.com/astral-sh/ruff-pre-commit
       # Ruff version.
       rev: v0.2.2
