ci: update vscode settings to use ruff formatter
BOARDFARM-4391

ruff config updated; black and isort removed

Change-Id: I8b0936a238c637667bde268f6a4cf5f7d7ca2065
Signed-off-by: Andrii Gavrysh <agavrysh@libertyglobal.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/5695
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Filippo Carra <filippo.carra@infosys.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -184,6 +184,8 @@ lint.ignore = [
     "TD",     # would conflict with TODO highligther
     "FIX002", # we need to keep TODOs in the code
     "E501",   # line too long ignoring
+    "COM812", # The following rule may cause conflicts when used with the formatter
+    "ISC001", # The following rule may cause conflicts when used with the formatter
 ]
 lint.select = ["ALL"]
 
