ci(pyproject.toml): allow ruff to fix all problems, but forgotten import
BOARDFARM-4636

Change-Id: Ib06bea68377529d420fed8e1e3d031f4d774c5f4
Signed-off-by: Filippo Carra <filippo.carra@infosys.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/5735
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Andrii Gavrysh <andrii.gavrysh@infosys.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -190,7 +190,7 @@ lint.ignore = [
 lint.select = ["ALL"]
 
 # Allow autofix for all enabled rules (when `--fix`) is provided.
-lint.fixable = ["C4", "COM", "PIE", "PT", "RUF", "SIM", "UP"]
+lint.fixable = ["ALL"]
 
 # Exclude a variety of commonly ignored directories.
 exclude = [
