ci: darglint2 introduction
add darglint 2 with -x to only show docstring problems, but don't fail

BOARDFARM-4599

Change-Id: I91693c8394138d1ef4540efc8b48ff38edc1815f
Signed-off-by: Andrii Gavrysh <agavrysh@libertyglobal.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/5827
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Filippo Carra <filippo.carra@infosys.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@ dev = [
     "flake8-docstrings",
     "flake8-rst",
     "flake8-rst-docstrings",
-    "darglint",
+    "darglint2",
     "mypy>=1.3",
     "nox",
     "pre-commit",
