--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,13 +54,13 @@ dev = [
     "flake8-docstrings",
     "flake8-rst",
     "flake8-rst-docstrings",
-    "darglint2",
+    "darglint2==v1.8.2",
     "mypy>=1.3",
     "nox",
     "pre-commit",
     "pylint",
     "pylint-per-file-ignores",
-    "ruff==v0.2.2",
+    "ruff==v0.3.3",
     "types-ipaddress",
     "types-PyYAML",
     "types-requests",
