ci(pre-commit-config.yaml): enforce darglint2 rules
BOARDFARM-4676

Change-Id: Ia85551a0db1738c6509a8428a37c07b452d71735
Signed-off-by: Andrii Gavrysh <agavrysh@libertyglobal.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/5928
Reviewed-by: Filippo Carra <filippo.carra@infosys.com>
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -110,7 +110,7 @@ repos:
       rev: v1.8.2
       hooks:
           - id: darglint2
-            args: [-x, boardfarm3]
+            args: [boardfarm3]
     - repo: local
       hooks:
           - id: nox
