ci(pre-commit-config.yaml): ruff-isort, ruff-format, ruff, darglint2 - executed on commit stage only
BOARDFARM-4750

Change-Id: I1d1d917d6f206e876fa53a8d4b935437bf0822a9
Signed-off-by: Andrii Gavrysh <agavrysh@libertyglobal.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/6109
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Filippo Carra <filippo.carra@infosys.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -104,13 +104,17 @@ repos:
             # https://docs.astral.sh/ruff/formatter/#sorting-imports
             args: [check, --select, I, --fix]
             name: ruff-isort
+            stages: [commit]
           - id: ruff-format
+            stages: [commit]
           - id: ruff
+            stages: [commit]
     - repo: https://github.com/akaihola/darglint2
       rev: v1.8.2
       hooks:
           - id: darglint2
             args: [boardfarm3]
+            stages: [commit]
     - repo: local
       hooks:
           - id: nox
