refactor(lib/multicast.py): implement proper type hinting
BOARDFARM-4996

Change-Id: I73b05edf0ebbc14d2e758123bba4d8dbab181782
Signed-off-by: Filippo Carra <filippo.carra@infosys.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/6915
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ dev = [
     "darglint2==v1.8.2",
     "mypy>=1.3",
     "nox",
+    "pandas-stubs",
     "pre-commit",
     "pylint",
     "pylint-per-file-ignores",
