fix(pyproject.toml): retsrict the pysnmp version
setting the "pysnmp==4.4.12" as updating to newer version break. This version will stay until the issue is debugged

Change-Id: I8d716d67894a46bfdf6be424c425d72d7540f8c6
Signed-off-by: Shakthi Ravichandran <sravichandran.contractor@libertyglobal.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/7741
Tested-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
(cherry picked from commit b854220c4e9f54eee976d5fc50ff329612156bfb)
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/7761

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@
         "pymongo",
         "pyserial",
         "pysmi",
-        "pysnmp",
+        "pysnmp==4.4.12",
         "pytest",                                      # see tests folder
         "pyvirtualdisplay==2.2",
         "requests",
