fix: restrict numpy<2.1.0
Change-Id: I2eb7d02af974016bfd78065f7ab79a87fa704869
Signed-off-by: Michele Gualco <msalvatoregualco@libertyglobal.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/8298
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Tested-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@
         "mitmproxy==9.0.1",
         "nested_lookup",
         "netaddr",
+        "numpy<2.1.0",
         "ouimeaux",
         "pandas",
         "pexpect ; platform_system != 'Windows'",
