fix(core.py): change name of kamailio to sipcenter_kamailio
avoid instantiating wrong device for mv boards

Change-Id: I76af4391244f3069dc70a18179e2b9f04c88ef04
Signed-off-by: Saurav Kochar <saurav.kochar01@infosys.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/8609
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Tested-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/boardfarm3/configs/boardfarm_config_example.json
+++ b/boardfarm3/configs/boardfarm_config_example.json
@@ -52,7 +52,7 @@
                 "options": "wan-static-ip:172.25.1.5, wan-no-dhcp-server, wan-static-ipv6:2001:dead:beef:2::5, static-route:0.0.0.0/0-172.25.1.1",
                 "password": "bigfoot1",
                 "port": 4005,
-                "type": "kamailio",
+                "type": "sipcenter_kamailio",
                 "username": "root"
             },
             {
