fix(toml): pin pyasn1=0.6.0
pyasn1>0.6.0 removes the compat module needed by pysnmp==4.4.12

Change-Id: I15e2e7de0a288025f6885df2269a9000a3b42509
Signed-off-by: Michele Gualco <msalvatoregualco@libertyglobal.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/8223
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Tested-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@
         "pexpect >=999; platform_system == 'Windows'", # Win does not support spawn()
         "pluggy>=1.0.0",
         "psutil",
+        "pyasn1==0.6.0",
         "pycountry",
         "pycryptodome",
         "pymongo",
