fix(pyproject.toml): change selenium install version
The selenium version is updated <=4.26.0 as it the lower has incomtability for appium-python-client
Due to this the pip install of boardfarm package is not successfull

BREAKING CHANGE:

Change-Id: I0987b530eea0fd51d0b9fc26fd0b46b72bf9b6e6
Signed-off-by: Shakthi Ravichandran <sravichandran.contractor@libertyglobal.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/9827
Tested-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,7 @@
         "pyvirtualdisplay==2.2",
         "requests",
         "retry",
-        "selenium>=4.10.0,<4.15.0",
+        "selenium>=4.10.0,<=4.26.0",
         "tabulate",
         "termcolor",
         "xmltodict",
