ci(toml): pin setuptools
Change-Id: Idbc21cf61139c4165cd536a652bb67131c924bf6
Signed-off-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Reviewed-on: http://gerrit.cicd.boardfarm.upclabs.com/c/github/boardfarm/+/786

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ dependencies = [
     "rich",
     "xmltodict",
     "debtcollector",
+    "setuptools>=78.1.0",
 ]
 
 [project.optional-dependencies]
