feat: add compare png images fucntion
BOARDFARM-5959

Change-Id: I53f657af40d28ec91c46e52dcf3b6eb33f5acc4c
Signed-off-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Reviewed-on: http://gerrit.cicd.boardfarm.upclabs.com/c/github/boardfarm/+/1402
Reviewed-by: Ketan Tewari <ktewari.contractor@libertyglobal.com>
Tested-by: Jenkins Automation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,8 @@ dependencies = [
     "rich",
     "xmltodict",
     "debtcollector",
+    "scikit-image",  # image comparison
+    "opencv-python", # image comparison
 ]
 
 [project.optional-dependencies]
@@ -208,7 +210,6 @@ target-version = "py39"
 
 [tool.ruff.lint]
     ignore = [
-        "ANN101", # annotation of self object
         "ANN204", # annotation of __init__()
         "D203",
         "D213",
